--- a/apps/blog-backend/package.json
+++ b/apps/blog-backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node src/index.ts",
+    "build" : "tsc -b", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
