--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "db",
+  "name": "@repo/db",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "exports":{
+  "exports": {
+    ".": "./src/index.ts",
     "./db": "./src/index.ts"
   },
   "scripts": {
