--- a/apps/susheel/package.json
+++ b/apps/susheel/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
     "motion": "^12.23.0",
     "next": "15.4.4",
@@ -16,6 +17,7 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@repo/db": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
