--- a/apps/susheel/package.json
+++ b/apps/susheel/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
     "motion": "^12.23.0",
