--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.0.1",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
   },
