--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "mac-portfolio",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "private": true,
   "scripts": {
     "build": "turbo run build",
