--- a/apps/susheel/package.json
+++ b/apps/susheel/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "@types/three": "^0.179.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
     "motion": "^12.23.0",
