--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "exports": {
-    ".": "./src/index.ts",
-    "./db": "./src/index.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
