--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,8 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "generate": "prisma generate",
+    "build": "pnpm run generate"    
   },
   "keywords": [],
   "author": "",
