--- a/apps/susheel/package.json
+++ b/apps/susheel/package.json
@@ -18,7 +18,8 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@repo/db": "workspace:*",
