--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,8 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**"],
+       "env": ["DATABASE_URL", "API_SECRET"]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -18,4 +19,5 @@
       "persistent": true
     }
   }
+  
 }
