--- a/turbo.json
+++ b/turbo.json
@@ -1,12 +1,17 @@
 {
-  "$schema": "https://turborepo.com/schema.json",
-  "ui": "tui",
-  "tasks": {
+  "$schema": "https://turbo.build/schema.json",
+  "pipeline": {
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"],
-       "env": ["DATABASE_URL", "API_SECRET"]
+      "outputs": [".next/**", "dist/**", "!.next/cache/**"],
+      "env": [
+        "DATABASE_URL",
+        "API_SECRET",
+        "NEXT_PUBLIC_API_URL",
+        "NEXTAUTH_SECRET",
+        "NEXTAUTH_URL"
+      ]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -25,5 +30,4 @@
       ]
     }
   }
-  
 }
