--- a/turbo.json
+++ b/turbo.json
@@ -6,11 +6,9 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "dist/**", "!.next/cache/**"],
       "env": [
-        "DATABASE_URL",
         "API_SECRET",
-        "NEXT_PUBLIC_API_URL",
-        "NEXTAUTH_SECRET",
-        "NEXTAUTH_URL"
+        "DATABASE_URL",
+        "NEXT_PUBLIC_API_URL"
       ]
     },
     "lint": {
