--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,9 @@
       "env": [
         "API_SECRET",
         "DATABASE_URL",
-        "NEXT_PUBLIC_API_URL"
+        "NEXT_PUBLIC_API_URL",
+        "NEXTAUTH_SECRET",
+        "NEXTAUTH_URL"
       ]
     },
     "lint": {
@@ -25,6 +27,9 @@
       "outputs": [
         "node_modules/.prisma/**",
         "prisma/**"
+      ],
+      "env": [
+        "DATABASE_URL"
       ]
     }
   }
