remove the export from auth

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "private": true,
   "scripts": {
+    "postinstall": "pnpm --filter @repo/db prisma generate",
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
