--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "generate": "prisma generate",
+    "postinstall": "prisma generate",
     "build": "pnpm run generate"    
   },
   "keywords": [],
