--- a/apps/susheel/package.json
+++ b/apps/susheel/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "pnpm --filter @repo/db build && next build",
-    "postinstall": "prisma generate",
+    "postinstall": "pnpm install prisma && prisma generate",
     "start": "next start",
     "lint": "next lint"
   },
