--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   ],
   "private": true,
   "scripts": {
-    "postinstall": "pnpm --filter @repo/db prisma generate",
+    "postinstall": "pnpm --filter @repo/db build",
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "deploy:build": "./build.sh"
   },
   "devDependencies": {
     "prettier": "^3.6.0",
