--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,9 +7,9 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "generate": "prisma generate",
-    "postinstall": "prisma generate",
-    "build": "prisma generate"
+  "generate": "prisma generate --schema=./prisma/schema.prisma",
+  "postinstall": "prisma generate --schema=./prisma/schema.prisma",
+  "build": "prisma generate --schema=./prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
