--- a/apps/whoisme/package.json
+++ b/apps/whoisme/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "pnpm --filter @repo/db build && next build && prisma generate",
+    "build": "pnpm --filter @repo/db build && next build",
     "start": "next start",
     "lint": "next lint"
   },
