--- a/apps/whoisme/package.json
+++ b/apps/whoisme/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "@prisma/client": "^6.11.1",
     "@repo/db": "workspace:*",
     "@types/three": "^0.179.0",
     "axios": "^1.11.0",
