--- a/apps/whoisme/package.json
+++ b/apps/whoisme/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
-    "@prisma/client": "^6.11.1",
     "@repo/db": "workspace:*",
     "@types/three": "^0.179.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
+    "geist-icons": "^1.3.0",
     "motion": "^12.23.0",
     "next": "16.1.1",
     "react": "19.1.0",
