--- a/apps/whoisme/package.json
+++ b/apps/whoisme/package.json
@@ -21,6 +21,7 @@
     "next": "16.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "three": "^0.179.1",
     "zustand": "^5.0.6"
   },
